[package]
name = "bitcoin-script"
version = "0.2.0"
authors = ["Matt Bell <mappum@gmail.com>", "Lukas George lukas@zerosync.org"]
edition = "2021"
description = "Inline Bitcoin scripts"
license = "MIT"
repository = "https://github.com/FairgateLabs/rust-bitcoin-script"

[lib]
proc-macro = true

[dependencies]
bitcoin = "0.32.1"
quote = "1.0.23"
proc-macro-error = "1.0.4"
lazy_static = "1.4.0"
hex = "0.4.3"
proc-macro2 = "1.0.51"
bitcoin-opcode-utils = { git = "https://github.com/FairgateLabs/rust-bitcoin-opcode-utils" }
